tests/fixtures/invalid/max_int_bytes.py
# Cannot call max() with Int, Bytes
x = max(1, b"hello")
